crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@545.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE alpha_neg PARTITION OF alpha FOR VALUES FROM ('-Infinity') TO (0) PARTITION BY RANGE (b);"
---
CreateStmt@0..102
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..22
    Ident@13..22 "alpha_neg"
  Whitespace@22..23 " "
  Partition@23..32 "PARTITION"
  Whitespace@32..33 " "
  Of@33..35 "OF"
  Whitespace@35..36 " "
  RangeVar@36..41
    Ident@36..41 "alpha"
  Whitespace@41..42 " "
  For@42..45 "FOR"
  Whitespace@45..46 " "
  Values@46..52 "VALUES"
  Whitespace@52..53 " "
  PartitionBoundSpec@53..77
    From@53..57 "FROM"
    Whitespace@57..58 " "
    Ascii40@58..59 "("
    AConst@59..70
      Sconst@59..70 "'-Infinity'"
    Ascii41@70..71 ")"
    Whitespace@71..72 " "
    To@72..74 "TO"
    Whitespace@74..75 " "
    Ascii40@75..76 "("
    AConst@76..77
      Iconst@76..77 "0"
  Ascii41@77..78 ")"
  Whitespace@78..79 " "
  PartitionSpec@79..100
    Partition@79..88 "PARTITION"
    Whitespace@88..89 " "
    By@89..91 "BY"
    Whitespace@91..92 " "
    Range@92..97 "RANGE"
    Whitespace@97..98 " "
    Ascii40@98..99 "("
    PartitionElem@99..100
      Ident@99..100 "b"
  Ascii41@100..101 ")"
  Ascii59@101..102 ";"

