crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@546.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE TABLE alpha_pos PARTITION OF alpha FOR VALUES FROM (0) TO (10.0) PARTITION BY LIST (c);
---
CreateStmt@0..94
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..22
    Ident@13..22 "alpha_pos"
  Whitespace@22..23 " "
  Partition@23..32 "PARTITION"
  Whitespace@32..33 " "
  Of@33..35 "OF"
  Whitespace@35..36 " "
  RangeVar@36..41
    Ident@36..41 "alpha"
  Whitespace@41..42 " "
  For@42..45 "FOR"
  Whitespace@45..46 " "
  Values@46..52 "VALUES"
  Whitespace@52..53 " "
  PartitionBoundSpec@53..70
    From@53..57 "FROM"
    Whitespace@57..58 " "
    Ascii40@58..59 "("
    AConst@59..60
      Iconst@59..60 "0"
    Ascii41@60..61 ")"
    Whitespace@61..62 " "
    To@62..64 "TO"
    Whitespace@64..65 " "
    Ascii40@65..66 "("
    AConst@66..70
      Fconst@66..70 "10.0"
  Ascii41@70..71 ")"
  Whitespace@71..72 " "
  PartitionSpec@72..92
    Partition@72..81 "PARTITION"
    Whitespace@81..82 " "
    By@82..84 "BY"
    Whitespace@84..85 " "
    Ident@85..89 "LIST"
    Whitespace@89..90 " "
    Ascii40@90..91 "("
    PartitionElem@91..92
      Ident@91..92 "c"
  Ascii41@92..93 ")"
  Ascii59@93..94 ";"

