crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@549.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE TABLE alpha_neg_p3 PARTITION OF alpha_neg FOR VALUES FROM (300) TO (400);
---
CreateStmt@0..80
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..25
    Ident@13..25 "alpha_neg_p3"
  Whitespace@25..26 " "
  Partition@26..35 "PARTITION"
  Whitespace@35..36 " "
  Of@36..38 "OF"
  Whitespace@38..39 " "
  RangeVar@39..48
    Ident@39..48 "alpha_neg"
  Whitespace@48..49 " "
  For@49..52 "FOR"
  Whitespace@52..53 " "
  Values@53..59 "VALUES"
  Whitespace@59..60 " "
  PartitionBoundSpec@60..78
    From@60..64 "FROM"
    Whitespace@64..65 " "
    Ascii40@65..66 "("
    AConst@66..69
      Iconst@66..69 "300"
    Ascii41@69..70 ")"
    Whitespace@70..71 " "
    To@71..73 "TO"
    Whitespace@73..74 " "
    Ascii40@74..75 "("
    AConst@75..78
      Iconst@75..78 "400"
  Ascii41@78..79 ")"
  Ascii59@79..80 ";"

